--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
-{% load thumbnail %}
 {% include 'posts/includes/switcher.html' %}
 <main>
   <div class="container py-5">
@@ -16,10 +15,11 @@
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
       </ul>
+      {% load thumbnail %}
       {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
         <img class="card-img my-2" src="{{ im.url }}">
       {% endthumbnail %}
-      <p>{{ post.text }}</p>
+      <p>{{ post.text|linebreaksbr }}</p>
       {% if post.group %}   
         <a href="{% url 'posts:group_list' post.group.slug %}">
         все записи группы</a>
